fix(link): overflow hidden on ellispsis

--- a/src/component/link/style/tool/_build.scss
+++ b/src/component/link/style/tool/_build.scss
@@ -72,6 +72,7 @@
     max-width: 100%;
     text-overflow: ellipsis;
     white-space: nowrap;
+    overflow: hidden;
   }
 }
 
